--- a/client_chat/pubspec.yaml
+++ b/client_chat/pubspec.yaml
@@ -30,13 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  crypto: ^3.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   web_socket_channel: ^2.4.0
   cupertino_icons: ^1.0.8
   sqflite: ^2.3.0
   path: ^1.8.3
+  cryptography: ^2.5.0
 
 dev_dependencies:
   flutter_test:
